<resources>
    <string name="app_name">Two App</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="boton_editar">Editar Datos</string>
    <string name="confirmar">Confirmar Datos</string>
    <string name="nombre">Horacio Castillejo Peña</string>
    <string name="Fecha_Nacimiento">01/04/1991</string>

    <string name="Telefono">944998648</string>
    <string name="Email">acheachehh@gmail.com</string>
    <string name="Descripcion">Hola kagueyer</string>
</resources>
