<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.acheache.castillejo.twoapp.EditarDatos">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        android:textStyle="bold"
        android:textSize="@dimen/confirmar"
        android:textColor="@color/text"
        android:layout_gravity="bottom"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
            >

        <ImageView
            android:id="@+id/imgNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/name_48"

            />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/tv"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
       >

        <ImageView
            android:id="@+id/imgFecha_Nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_48"

            />

        <TextView
            android:id="@+id/tvFecha_Nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fecha_Nacimiento"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/tv"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone_48"

            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/tv"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_48"

            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/tv"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >

        <ImageView
            android:id="@+id/imgDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_48"

            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/tv"
            android:layout_marginLeft="@dimen/left"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnMiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_editar"
        android:theme="@style/MiBotonRaised"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="175dp"
        android:onClick="hhClick"
        />

</LinearLayout>

